--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    By - Breanna Lau
+		    Click to see how Dice Roller is feeling. Oh and to roll the dice of course.
 	    </footer>
 	</body>
 </html>
